# bls12-381

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/field/: constant.h  fp.h  fp12.h  fp2.h  fp6.h
include/group/: constant.h  g1_affine.h  g1_projective.h  g2_affine.h  g2_prepared.h  g2_projective.h  gt.h
include/pairing/: miller_loop.h  miller_loop_driver.h  miller_loop_result.h  pairing.h
include/scalar/: constant.h  scalar.h
include/utils/: arith.h  bit.h  encode.h  random.h
src/field/: fp.cpp  fp12.cpp  fp2.cpp  fp6.cpp
src/group/: g1_affine.cpp  g1_projective.cpp  g2_affine.cpp  g2_prepared.cpp  g2_projective.cpp  gt.cpp
src/pairing/: miller_loop.cpp  miller_loop_driver.cpp  miller_loop_result.cpp  pairing.cpp
src/scalar/: multi.cpp  scalar.cpp
src/utils/: arith.cpp  bit.cpp  encode.cpp  random.cpp
test/: CMakeLists.txt  test_field_fp.cpp  test_field_fp12.cpp  test_field_fp2.cpp  test_field_fp6.cpp  test_group_g1.cpp  test_group_g2.cpp  test_pairing.cpp  test_scalar.cpp  test_util.cpp  test_util_bit.cpp
