CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
PROJECT(BLS12_381)
SET(CMAKE_CXX_STANDARD 20)

ADD_SUBDIRECTORY(test)

# Add sources
FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
ADD_LIBRARY(
        BLS12_381
        ${SOURCE_FILES}
)

# Add headers
TARGET_INCLUDE_DIRECTORIES(
        BLS12_381
        PUBLIC
        ${PROJECT_SOURCE_DIR}/include
)