CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
PROJECT(BLS12_381 VERSION 1.0.0)
SET(CMAKE_CXX_STANDARD 20)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
INCLUDE(Gtest)
INCLUDE(Rand)

ADD_SUBDIRECTORY(test)

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
ADD_LIBRARY(
        BLS12_381
        ${SOURCE_FILES}
)

TARGET_INCLUDE_DIRECTORIES(
        BLS12_381
        PUBLIC ${PROJECT_SOURCE_DIR}/include
)

TARGET_LINK_LIBRARIES(
        BLS12_381
        PUBLIC Rand
)